deploy: e8506adb6c382427677934de83f250d8b1ff9c25

--- a/ch07-02-defining-modules-to-control-scope-and-privacy.html
+++ b/ch07-02-defining-modules-to-control-scope-and-privacy.html
@@ -175,7 +175,7 @@
 <p>在此段落，我們將討論模組以及其他模組系統的部分，像是<em>路徑（paths）</em> 允許你來命名項目，而 <code>use</code> 關鍵字可以將路徑引入作用域，再來 <code>pub</code> 關鍵字可以讓指定的項目對外公開。我們還會討論到 <code>as</code> 關鍵字、外部套件以及全域（glob）運算子。現在讓我們先專注在模組吧！</p>
 <p><em>模組（Modules）</em> 能讓我們在 crate 內組織程式碼成數個群組以便使用且增加閱讀性。模組也能控制項目的<em>隱私權</em>，也就是該項目能否被外部程式碼<em>公開（public）</em> 使用，或者只作為內部<em>私有（private）</em> 實作細節，對外是無法使用的。</p>
 <p>舉例來說，讓我們建立一個提供餐廳功能的函式庫 crate。我們定義一個函式簽名不過本體會是空的，好讓我們專注在程式組織，而非餐廳程式碼的實作。</p>
-<p>在餐飲業中，餐廳有些地方會被稱作<em>前端（front of house）<em>而其他部分則是</em>後端（back of house）</em>。前端是消費者的所在區域，這裡是安排顧客座位、點餐並結帳、吧台調酒的地方。而後台則是主廚與廚師工作的廚房、洗碗工洗碗以及經理管理行政工作的地方。</p>
+<p>在餐飲業中，餐廳有些地方會被稱作<em>前台（front of house）<em>而其他部分則是</em>後台（back of house）</em>。前台是消費者的所在區域，這裡是安排顧客座位、點餐並結帳、吧台調酒的地方。而後台則是主廚與廚師工作的廚房、洗碗工洗碗以及經理管理行政工作的地方。</p>
 <p>要讓我們的 crate 像真正的餐廳一樣的話，我們可以組織函式進入模組中。要建立一個新的函式庫叫做 <code>restaurant</code> 的話，請執行 <code>cargo new --lib restaurant</code>。然後將範例 7-1 的程式碼放入 <em>src/lib.rs</em> 中，這定義了一些模組與函式簽名。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">mod front_of_house {
